# src/main/java/com/gft/employeeappraisal/controller/AppraisalsController.java
@@ -2,6 +2,8 @@ package com.gft.employeeappraisal.controller;
 
 import com.gft.swagger.employees.api.AppraisalApi;
 import com.gft.swagger.employees.model.AppraisalDTO;
+import com.gft.swagger.employees.model.EmployeeAppraisalDTO;
+import com.gft.swagger.employees.model.EmployeeEvaluationFormDTO;
 import com.gft.swagger.employees.model.EvaluationFormDTO;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
@@ -18,26 +20,26 @@ import java.util.List;
 public class AppraisalsController implements AppraisalApi {
 
 	@Override
-	public ResponseEntity<EvaluationFormDTO> employeesEmployeeIdAppraisalsAppraisalIdFormsFormIdGet(Integer employeeId,
-																									Integer appraisalId,
-																									Integer formId) {
+	public ResponseEntity<EmployeeEvaluationFormDTO> employeesEmployeeIdAppraisalsAppraisalIdFormsFormIdGet(Integer employeeId,
+																											Integer appraisalId,
+																											Integer formId) {
 		return null;
 	}
 
 	@Override
-	public ResponseEntity<List<EvaluationFormDTO>> employeesEmployeeIdAppraisalsAppraisalIdFormsGet(Integer employeeId,
+	public ResponseEntity<EmployeeEvaluationFormDTO> employeesEmployeeIdAppraisalsAppraisalIdFormsGet(Integer employeeId,
 																									Integer appraisalId) {
 		return null;
 	}
 
 	@Override
-	public ResponseEntity<AppraisalDTO> employeesEmployeeIdAppraisalsAppraisalIdGet(Integer employeeId,
-																					Integer appraisalId) {
+	public ResponseEntity<EmployeeAppraisalDTO> employeesEmployeeIdAppraisalsAppraisalIdGet(Integer employeeId,
+																							Integer appraisalId) {
 		return null;
 	}
 
 	@Override
-	public ResponseEntity<List<AppraisalDTO>> employeesEmployeeIdAppraisalsGet(Integer employeeId) {
+	public ResponseEntity<EmployeeAppraisalDTO> employeesEmployeeIdAppraisalsGet(Integer employeeId) {
 		return null;
 	}
 
